<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jy.kim.lancs.magicdoor.main.StudentMainActivityOld" >

    <Button
        android:id="@+id/btnToManageAnnouncements"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnToManageTimeTable"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/manage_announcements" />

    <Button
        android:id="@+id/btnToManageAppointments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnToManageAnnouncements"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/manage_appointments"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/btnToMessageActMainLec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnToManageAppointments"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/check_messages" />

    <ImageView
        android:id="@+id/imageView1"
        android:contentDescription="@string/logo"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_above="@+id/btnToMessageActMainLec"
        android:layout_alignLeft="@+id/btnToMessageActMainLec"
        android:layout_alignParentTop="true"
        android:src="@drawable/lancs_logo" />

    <Button
        android:id="@+id/btnToManageTimeTable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnToManageAnnouncements"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/manage_time_table" />

</RelativeLayout>